--- a/train vgg model.ipynb
+++ b/train vgg model.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Import**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -29,17 +36,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "from tensorflow.keras.models import load_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BASE_DIR = \"../Cassava_Leaf_Disease_Classification/\"\n",
-    "TRAIN_DIR = os.path.join(BASE_DIR, \"train_images\")"
+    "from tensorflow.keras.models import load_model\n",
+    "from config import *"
    ]
   },
   {
