--- a/create vgg model.ipynb
+++ b/create vgg model.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Import Libraries**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "id": "BT2eSgZuxQdA"
    },
@@ -16,43 +33,81 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "L7UFz7rgxQdw"
-   },
+   "metadata": {},
    "source": [
-    "## Create model"
+    "**Global Variables**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "id": "kHzeA17PxQd_"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "vgg_model = VGG16(include_top=False, input_shape=(300, 300, 3))"
+    "**Functions**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "L7UFz7rgxQdw"
+   },
+   "source": [
+    "**Create model**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "id": "T_qxnbp_xQeC"
+    "id": "kHzeA17PxQd_"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\user\\anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
+     ]
+    }
+   ],
    "source": [
-    "model = Sequential(\n",
-    "    [vgg_model,\n",
-    "     Flatten(),\n",
-    "     Dense(128, activation='relu'),\n",
-    "     Dense(5, activation='sigmoid')]\n",
-    ")"
+    "vgg_model = VGG16(include_top=False, input_shape=(300, 300, 3))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "id": "T_qxnbp_xQeC"
+   },
+   "outputs": [],
+   "source": [
+    "model = Sequential([\n",
+    "    vgg_model,\n",
+    "    Flatten(),\n",
+    "    Dense(128, activation='relu'),\n",
+    "    Dense(5, activation='sigmoid')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -81,7 +136,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "vgg16 (Functional)           (None, 9, 9, 512)         14714688  \n",
+      "vgg16 (Model)                (None, 9, 9, 512)         14714688  \n",
       "_________________________________________________________________\n",
       "flatten (Flatten)            (None, 41472)             0         \n",
       "_________________________________________________________________\n",
@@ -102,79 +157,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "id": "B_UYaqwVxQeJ"
    },
    "outputs": [],
    "source": [
-    "vgg_model.trainable = False"
+    "vgg_model.trainable = False\n",
+    "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 289
-    },
-    "executionInfo": {
-     "elapsed": 3707,
-     "status": "ok",
-     "timestamp": 1601479382933,
-     "user": {
-      "displayName": "dana makov",
-      "photoUrl": "",
-      "userId": "00906613210296598824"
-     },
-     "user_tz": -180
-    },
-    "id": "RVjbfG1NxQeM",
-    "outputId": "cca013be-43b9-4fba-939d-69d79a6de044"
+    "id": "s8HHzrcexQeS"
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "vgg16 (Functional)           (None, 9, 9, 512)         14714688  \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 41472)             0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 128)               5308544   \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 5)                 645       \n",
-      "=================================================================\n",
-      "Total params: 20,023,877\n",
-      "Trainable params: 5,309,189\n",
-      "Non-trainable params: 14,714,688\n",
-      "_________________________________________________________________\n"
+      "WARNING:tensorflow:From C:\\Users\\user\\anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\nn_impl.py:180: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
      ]
     }
    ],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "id": "s8HHzrcexQeS"
-   },
-   "outputs": [],
    "source": [
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -194,19 +210,11 @@
     "id": "D7mlHo0Wct8j",
     "outputId": "c130e6d3-c11a-4ed7-f1a5-a135fea3bdac"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved model to disk\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save model and architecture to single file\n",
-    "model.save(\"vgg_model.h5\")\n",
-    "print(\"Saved model to disk\")"
+    "# model.save(\"vgg_model.h5\")\n",
+    "# print(\"Saved model to disk\")"
    ]
   }
  ],
@@ -232,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   },
   "nbTranslate": {
    "displayLangs": [
