trained light model for test submission

--- a/create vgg model.ipynb
+++ b/create vgg model.ipynb
@@ -31,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "vgg_model = VGG16(include_top=False, input_shape=(300, 300, 3))"
+    "vgg_model = VGG16(include_top=False, input_shape=(150, 150, 3))"
    ]
   },
   {
@@ -81,16 +81,16 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "vgg16 (Functional)           (None, 9, 9, 512)         14714688  \n",
+      "vgg16 (Functional)           (None, 4, 4, 512)         14714688  \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 41472)             0         \n",
+      "flatten (Flatten)            (None, 8192)              0         \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 128)               5308544   \n",
+      "dense (Dense)                (None, 128)               1048704   \n",
       "_________________________________________________________________\n",
       "dense_1 (Dense)              (None, 5)                 645       \n",
       "=================================================================\n",
-      "Total params: 20,023,877\n",
-      "Trainable params: 20,023,877\n",
+      "Total params: 15,764,037\n",
+      "Trainable params: 15,764,037\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -142,16 +142,16 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "vgg16 (Functional)           (None, 9, 9, 512)         14714688  \n",
+      "vgg16 (Functional)           (None, 4, 4, 512)         14714688  \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 41472)             0         \n",
+      "flatten (Flatten)            (None, 8192)              0         \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 128)               5308544   \n",
+      "dense (Dense)                (None, 128)               1048704   \n",
       "_________________________________________________________________\n",
       "dense_1 (Dense)              (None, 5)                 645       \n",
       "=================================================================\n",
-      "Total params: 20,023,877\n",
-      "Trainable params: 5,309,189\n",
+      "Total params: 15,764,037\n",
+      "Trainable params: 1,049,349\n",
       "Non-trainable params: 14,714,688\n",
       "_________________________________________________________________\n"
      ]
@@ -205,7 +205,7 @@
    ],
    "source": [
     "# save model and architecture to single file\n",
-    "model.save(\"vgg_model.h5\")\n",
+    "model.save(\"vgg_model_150X150.h5\")\n",
     "print(\"Saved model to disk\")"
    ]
   }
